--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "qiot",
+  "name": "SmartPlug",
   "version": "1.0.0",
-  "description": "",
+  "description": "An smart plug controled with raspberryPi and qIot",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node smartPlug.js"
+  },
   "dependencies": {
     "coap": "^0.20.0",
     "mara": "^0.1.4",
     "mqtt": "^2.5.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC"
 }
